[package]
name = "cronista"
version = "0.24.52"
description = "a authenticated log for Chrome OS."
authors = ["The ChromiumOS Authors"]
edition = "2018"

[profile.release]
panic = "abort"
overflow-checks = true

[dependencies]
anyhow = "1.0.0"
crosvm-base = "0.1.0"
getopts = "0.2"
libchromeos = { path = "../libchromeos-rs", features = ['chromeos-module'] } # provided by ebuild
libsirenia = { path = "../sirenia/libsirenia" } # provided by ebuild
log = "0.4.0"
thiserror = "1.0.20"

[patch.crates-io] # ignored by ebuild
audio_streams = { path = "../../../chroot/usr/lib/cros_rust_registry/registry/audio_streams-0.1.0/" } # ignored by ebuild
base_event_token_derive = { path = "../../../chroot/usr/lib/cros_rust_registry/registry/base_event_token_derive-0.1.0/" } # ignored by ebuild
crosvm-base = { path = "../../../chroot/usr/lib/cros_rust_registry/registry/crosvm-base-0.1.0/" } # ignored by ebuild
data_model = { path = "../../../chroot/usr/lib/cros_rust_registry/registry/data_model-0.1.50/" } # ignored by ebuild
minijail = { path = "../../platform/minijail/rust/minijail/" } # ignored by ebuild
sync = { path = "../../../chroot/usr/lib/cros_rust_registry/registry/sync-0.1.149/" } # ignored by ebuild
