[package]
name = "crosh"
version = "0.24.52"
authors = ["The ChromiumOS Authors"]
edition = "2018"

[profile.release]
panic = "abort"
overflow-checks = true

[lib]
name = "crosh"

[[bin]]
name = "crosh"

[dependencies]
bitflags = "1.3.2"
chrono = "0.4"
dbus = "0.9"
getopts = "0.2"
lazy_static = "1.4.0"
libc = "0.2.44"
libchromeos = { path = "../libchromeos-rs", features = ['chromeos-module'] } # provided by ebuild
rand = "0.7"
remain = "*"
regex = "1.0.6"
rustyline = "9.1.1"
shell-words = "1.0.0"
system_api = { path = "../system_api" } # provided by ebuild
textwrap = "0.11.0"
tlsdate_dbus = { path = "../../third_party/tlsdate" } # provided by ebuild

[dev-dependencies]
tempfile = "3.2.0"

[patch.crates-io] # ignored by ebuild
audio_streams = { path = "../../../chroot/usr/lib/cros_rust_registry/registry/audio_streams-0.1.0/" } # ignored by ebuild
base_event_token_derive = { path = "../../../chroot/usr/lib/cros_rust_registry/registry/base_event_token_derive-0.1.0/" } # ignored by ebuild
crosvm-base = { path = "../../../chroot/usr/lib/cros_rust_registry/registry/crosvm-base-0.1.0/" } # ignored by ebuild
data_model = { path = "../../../chroot/usr/lib/cros_rust_registry/registry/data_model-0.1.50/" } # ignored by ebuild
minijail = { path = "../../platform/minijail/rust/minijail/" } # ignored by ebuild
sync = { path = "../../../chroot/usr/lib/cros_rust_registry/registry/sync-0.1.149/" } # ignored by ebuild
